# nature_inspired_algs

./: .gitignore  CMakeLists.txt  README.md
lab_01/: CMakeLists.txt
lab_01/analysis/: circle_area_plots.py
lab_01/src/: CircleAreaExp.hpp  RandomGeneratorExample.hpp  main.cpp  test.hpp
lab_02/: CMakeLists.txt
lab_02/analysis/: results.py
lab_02/src/: FirstImprovementLocalSearch.hpp  LocalSearch.hpp  main.cpp
libs/: CMakeLists.txt  CSVFile.h
libs/random/: RandomGenerator.hpp  RandomGenerator.tpp
scripts/: create_lab.sh
